Added lesson 3: Variables(numbers)

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             
         </script>  
     </div>
-<!--- 2nd LESSON-->
+<!--- 2nd LESSON Variables-->
 <div class="lesson">
     <h2>Lesson2:Variables(Text Storage)</h2>
     <h2 id="heading2">Text will change </h2>
@@ -45,5 +45,22 @@
 </script>
 </div>
 
+<!--Lesson3-->
+<div class="lesson">
+    <h2>Lesson 3:Variables(Numbers)</h2>
+    <p id="math">7 × 5 =</p>
+    <button onclick="lesson3()"> Do Math</button>
+    <script>
+        function lesson3() {
+            var num1 = 7;
+            var num2 = 5;
+
+        document.getElementById("math").innerHTML= (num1 * num2);
+            
+        }
+    </script>
+
+
+</div>
 </body>
 </html>
