--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@ if(userPassword == "Msih")
 }
 </script>
 </div>
-<!-----Lesson 5-------->
+<!-----Lesson 5:Click events-------->
+
+<div class="lesson">
+    <h2>Lesson 5:Click events</h2>
+
+    <h3 onclick="this.innerHTML='is awesome'">JavaScript</h3>
+    <p>Click on the word "JavaScript" above</p>
+
+</div>
 </body>
 </html>
