--- a/index.html
+++ b/index.html
@@ -107,6 +107,44 @@ if(userPassword == "Msih")
     }
      </script>
    </div>
+   <!--------lesson7:--------->
+   <!-- Lesson 7 -->
+    <div class="lesson">Add commentMore actions
+        <h2>Lesson 7: Function Parameters</h2>
+        <p><strong>Concept</strong>: Passing data into functions</p>
+
+        <button onclick="addNumbers(10, 7)">Add 10 + 7</button>
+        <button onclick="addNumbers(25, 18)">Add 25 + 18</button>
+        <button onclick="addNumbers(1245, 562)">Add 1245 + 562</button>
+        <div class="output" id="addition7">Result will show here.</div>
+
+        <script>
+            function addNumbers(num1, num2) {
+                document.getElementById("addition7").innerHTML = "12" + num2
+            }
+        </script>
+    </div>
+   <!-------lesson8--------->
    
+    <div class="lesson">
+        <h2>Lesson 8: Function Return</h2>Add commentMore actions
+        <p><strong>Concept:</strong> Functions returning values to be used elsewhere.</p>
+
+        <button onclick="runLesson8()">Calcualte and Display Result</button>
+        <div class="output" id="addition8">Result will show here.</div>
+
+        <script>
+            function runLesson8() {
+                document.getElementById("addition8").innerHTML = "10 + 7 = " + addNumbersReturn(10, 7);
+            }
+
+            function addNumbersReturn(num1, num2) {
+                return num1 + num2;
+            }
+        </script>
+
+
+
+   </div>
 </body>
 </html>
